RESOLVED FIXED15063
REGRESSION (r25151): Switching to a tab waiting for first data does not clear the window
https://bugs.webkit.org/show_bug.cgi?id=15063
Summary REGRESSION (r25151): Switching to a tab waiting for first data does not clear...
mitz
Reported 2007-08-23 13:49:47 PDT
Summary: Switching from one tab to a newly created tab that has not gotten beyond a certain stage of loading leaves behind the image of the first tab. Forcing redraw may clear the old image. Steps to reproduce: 1) Open any page in a first tab. 2) Create a new empty tab. 3) In the empty tab, type a URL that takes long to start loading (one way to fake this is to run "nc -l 9999" and go to <http://127.0.0.1:9999/>) and press Return. 4) Use the keyboard to switch to the first tab and then back to the new tab. Expected results: When switching to the new tab in step 4, it should display a blank page. Actual results: When switching to the new tab in step 4, it displayed the contents of the first tab. Regression: Regressed between r25065 and TOT. My guess is <http://trac.webkit.org/projects/webkit/changeset/25151>.
Attachments
patch (8.80 KB, patch)
2008-11-09 11:39 PST, Darin Adler
sullivan: review+
Matt Lilek
Comment 1 2007-08-23 15:53:53 PDT
I've seen this on Windows too.
Darren Collins
Comment 2 2007-08-25 15:34:45 PDT
Another way to reproduce (only tested on XP) is to set "New Window Opens With" preference to "Empty Page". When Safari is started the "Empty Page" does not get painted, so windows behind Safari bleed through. Dragging windows across the "Empty Page" show it is not getting painted.
mitz
Comment 3 2007-08-28 09:37:19 PDT
(In reply to comment #2) > Another way to reproduce (only tested on XP) is to set "New Window Opens With" > preference to "Empty Page". When Safari is started the "Empty Page" does not > get painted, so windows behind Safari bleed through. Dragging windows across > the "Empty Page" show it is not getting painted. I believe this is <rdar://problem/5424801>, fixed in <http://trac.webkit.org/projects/webkit/changeset/25270>.
Darren Collins
Comment 4 2007-08-28 14:43:40 PDT
(In reply to comment #3) Confirmed "Empty Page" now paints on XP on r25279.
David Kilzer (:ddkilzer)
Comment 5 2007-08-28 21:12:12 PDT
Marking resolved per Comment #4.
mitz
Comment 6 2007-08-28 22:27:18 PDT
(In reply to comment #5) > Marking resolved per Comment #4. What's resolved is the Windows variant of the bug, described in comment #2. The original bug described in comment #0 is still reproducible on Mac.
Adele Peterson
Comment 7 2007-08-30 17:31:36 PDT
John Sullivan
Comment 8 2008-01-17 12:26:25 PST
Some updated info from the radar: This regressed with the first change in <http://trac.webkit.org/projects/webkit/changeset/25151/trunk/WebCore/loader/FrameLoader.cpp> The problem is that the WebHTMLView has no size (0,0) because there hasn't been any layout that forces a size. Manually resizing cures the problem because it forces a layout via an inLiveResize check in [WebDynamicScrollBarsView updateScrollers].
David Kilzer (:ddkilzer)
Comment 9 2008-01-19 03:45:18 PST
This sounds a lot like Bug 16417.
Darin Adler
Comment 10 2008-11-09 11:39:46 PST
Darin Adler
Comment 11 2008-11-09 11:42:41 PST
*** Bug 16417 has been marked as a duplicate of this bug. ***
John Sullivan
Comment 12 2008-11-09 12:15:34 PST
Comment on attachment 25003 [details] patch Most excellent.
Darin Adler
Comment 13 2008-11-09 12:20:59 PST
Note You need to log in before you can comment on or make changes to this bug.